blockml/test/valid/03_mea_refs_dim/v5/v5d.dashboard
dashboard: v5d
title: 'sales'
reports:
- title: 'weekly'
  model: v5m
  select:
  - mf.mea1
  type: 'table'

